examples/test/testpolicy9688.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9688
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key22: value40
      key33: value17
      key31: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value37
          key19: value32
          key47: value23
